--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "svg.draw.js": "^2.0.3",
+    "svg.js": "^2.6.6",
+    "svg.select.js": "^3.0.1",
     "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
     "vuex": "^3.0.1"
