--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svg.select.js": "^3.0.1",
     "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
