--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "lodash": "^4.17.11",
+    "lodash.throttle": "^4.1.1",
     "svg.draggable.js": "^2.2.1",
     "svg.draw.js": "^2.0.3",
     "svg.js": "^2.6.6",
