Feature point clicks now reflect on the canvas and side panel accordingly

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "svg.select.js": "^3.0.1",
     "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
+    "vue-input-tag": "^1.0.6",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
