--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "datalist-polyfill": "^1.22.1",
     "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
     "svg.draggable.js": "^2.2.1",
