--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "bootstrap": "^4.1.3",
     "datalist-polyfill": "^1.22.1",
+    "file-saver": "^2.0.0-rc.4",
     "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
+    "nimn_schema_builder": "^2.0.0",
+    "nimnjs": "^2.2.0",
     "svg.draggable.js": "^2.2.1",
     "svg.draw.js": "^2.0.3",
     "svg.js": "^2.6.6",
