Changed: Generate own ID's for each shape/featurepoint for consistency

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue": "^2.5.17",
     "vue-input-tag": "^1.0.6",
     "vuedraggable": "^2.16.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xml-js": "^1.6.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
