--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "bootstrap": "^4.1.3",
-    "datalist-polyfill": "^1.22.1",
     "file-saver": "^2.0.0-rc.4",
     "lodash": "^4.17.11",
     "lodash.throttle": "^4.1.1",
@@ -24,10 +23,9 @@
     "svg.js": "^2.6.6",
     "svg.resize.js": "^1.4.2",
     "svg.select.js": "^3.0.1",
-    "velocity-animate": "^1.5.2",
     "vue": "^2.5.17",
     "vue-analytics": "^5.16.0",
-    "vue-input-tag": "^1.0.6",
+    "vue-template-compiler": "^2.5.17",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "xml-js": "^1.6.8"
@@ -37,8 +35,13 @@
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
     "@vue/eslint-config-prettier": "^3.0.3",
+    "@vuedoc/md": "^1.5.0",
+    "@vuedoc/parser": "^1.4.0",
+    "babel-core": "^6.26.3",
+    "glob": "^7.1.3",
     "lint-staged": "^7.2.2",
-    "vue-template-compiler": "^2.5.17"
+    "webpack": "^4.25.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
