--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: NaturalIntelligence
-open_collective: fast-xml-parser
+open_collective: imglab
 custom: ["https://paypal.me/naturalintelligence"]
